5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1668_1392.log
== SUBMITION (2019-04-15 18:07:29) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = consumo*3.5 + 30

if  (consumo < 10):
	  print(round(funcao, 2))
		
else:
	 print(round(funcao2; 2))
-- EXECUTION TIME:
0.163203
-- ERROR:
  File "/home/codebench/codes/1668/1392/main.py", line 10
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:08:19) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = consumo*3.5 + 30

if  (consumo < 10):
	  print(round(funcao, 2))
		
else:
	 print(round(funcao2; 2))
-- ERROR:
File "XXXX", line 10
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:08:35) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = consumo*3.5 + 30

if  (consumo < 10):
	  print(round(funcao, 2))
		
else:
	print(round(funcao2; 2))
-- ERROR:
File "XXXX", line 10
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:08:48) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = consumo*3.5 + 30

if  (consumo < 10):
	   print(round(funcao, 2))
		
else:
	  print(round(funcao2; 2))
-- ERROR:
File "XXXX", line 10
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:09:13) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = (consumo*3.5) + 30

if  (consumo < 10):
	   print(round(funcao, 2))
		
else:
	  print(round(funcao2; 2))
-- ERROR:
File "XXXX", line 10
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:09:30) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = (consumo*3.5) + 30

if  (consumo < 10):
     print(round(funcao, 2))
		
else:
    print(round(funcao2; 2))
-- ERROR:
File "XXXX", line 10
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:09:40) 
-- CODE:
consumo = int(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = (consumo*3.5) + 30

if  (consumo < 10):
     print(round(funcao, 2))
		
else:
    print(round(funcao2; 2))
-- ERROR:
File "XXXX", line 10
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:10:11) 
-- CODE:
consumo = int(input("consumo de agua: "))
funcao = 2
funcao2 = 4

if  (consumo < 10):
     print(round(funcao, 2))
		
else:
    print(round(funcao2; 2))
-- ERROR:
File "XXXX", line 9
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:10:28) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = (consumo*3.5) + 30


-- ERROR:
File "XXXX", line 9
    print(round(funcao2; 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:11:55) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = (consumo*3.5) + 30

if  (consumo < 10):
     print(round(funcao, 2))
		
else:
	 print(round(funcao2, 2))
-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:11:58) 
-- CODE:
consumo = float(input("consumo de agua: "))

funcao = consumo*3 + 30
funcao2 = (consumo*3.5) + 30

if  (consumo < 10):
     print(round(funcao, 2))
		
else:
	 print(round(funcao2, 2))
-- EXECUTION TIME:
0.143267
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
54.0
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
142.0
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
556.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
